--- a/scss/block/_effectiveness.scss
+++ b/scss/block/_effectiveness.scss
@@ -22,6 +22,10 @@
   @include tablet {
     margin-bottom: rem(50);
   }
+
+  @include mobile {
+    font-size: 28px;
+  }
 }
 
 .effectiveness__content {
