--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -93,6 +93,10 @@
   line-height: 100%;
   font-weight: 400;
   text-transform: uppercase;
+
+  @include mobile {
+    font-size: 24px;
+  }
 }
 
 .hero__subtitle {
