--- a/scss/block/_symptoms.scss
+++ b/scss/block/_symptoms.scss
@@ -20,12 +20,17 @@
 }
 
 .symptoms__container {
+  max-width: rem(1140);
   height: 100%;
   padding-bottom: rem(30);
   display: flex;
   flex-direction: column;
   position: relative;
   z-index: 1;
+
+  @include tablet {
+    max-width: vw(1220px);
+  }
 }
 
 .symptoms__title {
