--- a/scss/block/_thrush.scss
+++ b/scss/block/_thrush.scss
@@ -24,6 +24,10 @@
   font-weight: 400;
   line-height: 100%;
   text-align: center;
+
+  @include mobile {
+    font-size: 28px;
+  }
 }
 
 .thrush__description {
@@ -50,6 +54,7 @@
 .thrush__content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   row-gap: rem(20);
 
   @include tablet {
@@ -199,81 +204,3 @@
     }
   }
 }
-
-//   @media (max-width: rem(1279)) {
-//     .thrush-item:nth-of-type(3) {
-//       margin-right: rem(50);
-//     }
-
-//     .thrush-item:nth-of-type(4) {
-//       margin-left: 0;
-//     }
-//   }
-
-//   @media (max-width: rem(1023)) {
-//     .thrush-content {
-//       grid-template-columns: repeat(auto-fit, minmax(rem(360), 1fr));
-//     }
-
-//     .thrush-item:nth-of-type(3) {
-//       margin-right: rem(20);
-//     }
-
-//     .thrush-item:nth-of-type(2) {
-//       margin-left: rem(20);
-//     }
-//   }
-
-//   @media (max-width: rem(767)) {
-//     .thrush-section {
-//       align-items: start;
-//     }
-
-//     .thrush-section .section-title {
-//       font-size: rem(24);
-//       line-height: 100%;
-//     }
-
-//     .section-description {
-//       font-size: rem(16);
-//       line-height: 100%;
-//     }
-
-//     .thrush-content {
-//       margin-top: rem(30);
-//       display: flex;
-//       flex-direction: column;
-//       align-items: center;
-//       gap: 0;
-//     }
-
-//     .thrush-content .thrush-item {
-//       max-width: rem(526);
-//       margin: 0;
-//       padding: rem(12);
-//       border-radius: rem(20);
-//     }
-
-//     .thrush-content .thrush-item p {
-//       font-size: rem(14);
-//       line-height: 120%;
-//       text-align: left;
-//     }
-
-//     .thrush-item:nth-of-type(2) {
-//       order: 1;
-//       width: 100%;
-//     }
-
-//     .thrush-item:nth-of-type(1) {
-//       order: 2;
-//     }
-
-//     .thrush-item:nth-of-type(3) {
-//       order: 3;
-//     }
-
-//     .thrush-item:nth-of-type(4) {
-//       order: 4;
-//     }
-//   }
