--- a/scss/block/_treatment.scss
+++ b/scss/block/_treatment.scss
@@ -29,6 +29,7 @@
   margin-top: rem(50);
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: rem(60);
 
   @include tablet {
