--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Roboto SemiCondensed";
+  font-family: "Roboto Condensed";
   src: url("../public/fonts/RobotoSemiCondensed-SemiBold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-  font-family: "Roboto SemiCondensed";
+  font-family: "Roboto Condensed";
   src: url("../public/fonts/RobotoSemiCondensed-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
@@ -55,7 +55,7 @@
 }
 
 @font-face {
-  font-family: "Roboto SemiCondensed";
+  font-family: "Roboto Condensed";
   src: url("../public/fonts/RobotoSemiCondensed-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
