--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -31,7 +31,7 @@
   width: rem(266);
   position: absolute;
   bottom: rem(19);
-  right: rem(400);
+  right: rem(330);
   user-select: none;
   z-index: 1;
 
@@ -48,7 +48,7 @@
   }
 
   @media screen and (max-width: 375px) {
-    width: rem(360);
+    width: rem(300);
   }
 
   @media screen and (max-height: 500px) {
@@ -60,14 +60,10 @@
   width: rem(328);
   position: absolute;
   bottom: 0;
-  right: rem(58);
+  right: rem(-8);
   filter: drop-shadow(12px 19px 50px rgba(0, 0, 0, 0.1));
   user-select: none;
   z-index: 1;
-
-  @include tablet {
-    right: 0;
-  }
 
   @include mobile {
     display: none;
@@ -101,12 +97,16 @@
 
 .hero__subtitle {
   font-family: var(--second-family);
-  max-width: rem(621);
+  max-width: rem(720);
   font-size: rem(56);
   line-height: 111%;
   letter-spacing: -0.03em;
   font-weight: 600;
   text-transform: uppercase;
+
+  @media screen and (max-width: 375px) {
+    font-size: 34px;
+  }
 }
 
 .hero-title__name {
